# rss2pdf

./: .gitignore  config.toml  makefile  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  __main__.py  dl.py
tests/: test_main.py
