
[project]
name = "NAME"
version = "0.0.0" # TODO; automatically update versions by looking at git
description = ""
dynamic = ["readme"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[git]
github = "https://github.com/JJJHolscher/NAME"

[project.urls]
homepage = "https://github.com/JJJHolscher/NAME"

[[project.authors]]
name = "Jochem Hölscher"
email = "jonoDASHdevDOTSIXpsuoATsimpleloginDOTcom"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["NAME"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.jupytext]
formats = "ipynb,py"

[tool.pyright]
exclude = ".venv"
venvPath = "."
venv = ".venv"
